@@ -136,6 +136,13 @@ private:
 	void ResampleVolume(short* pcmbuf, int size);
 	void Resuscitation();
 
+	// access registers
+	long ReadRegister(int registernum);
+	void WriteRegister(int registernum, int val);
+
+	// maybe we should copy this routine into em8300 driver
+	void Dxr3CopyYUVData(int pos, int *dst, int length);
+
 protected:
     static cMutex* m_pMutex;				///< mutex for dxr3interface
 
